--- a/index.html
+++ b/index.html
@@ -3,28 +3,227 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="logo logo_place_header" role="img"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
+      <img class="header__main-illustration" alt="опять двойка" src="./images/header-image.png">
+      <div class="header__square-pic" role="img"></div>
     </header>
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+
+          <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="two-columns__paragraph two-columns__paragraph_space_top"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="two-columns__paragraph two-columns__paragraph_space_top">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+      <section class="techniques">
+         <h2 class="section-title">Техники Обучения</h2>
+         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+       <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="виды внимания">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="recall">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="интерливинг">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="вопросы">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="competence">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+       </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <div class="video__iframe">
+            <iframe class="iframe" id="ytplayer-right" width="515" height="316"
+            src="https://www.youtube.com/embed/5MgBikgcWnY"
+            allowfullscreen></iframe>
+          </div>
+          <div class="video__iframe">
+            <iframe class="iframe" id="ytplayer-left" width="515" height="316"
+            src="https://www.youtube.com/embed/arj7oStGLkU"
+           allowfullscreen></iframe>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h3 class="two-columns__brief">История Барбары Оакли</h3>
+
+          <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учебу и мозг</p>
+        <div class="table">
+
+          <div class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+          </div>
+          <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text"> Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+          </div>
+          <div class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+          </div>
+
+
+        </div>
+
       </section>
 
       <section class="feynman">
       </section>
 
       <section class="kaufman">
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <div class="table table_theme_dark">
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">1</h3>
+            <p class="table__text table__text_theme_dark.css">Выберите привлекательный проект.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">2</h3>
+            <p class="table__text table__text_theme_dark.css">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">3</h3>
+            <p class="table__text table__text_theme_dark.css">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">4</h3>
+            <p class="table__text table__text_theme_dark.css">Разбейте навык на элементы.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">5</h3>
+            <p class="table__text table__text_theme_dark.css">Приготовьте всё необходимое для занятий.</p>
+
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">6</h3>
+            <p class="table__text table__text_theme_dark.css">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">7</h3>
+            <p class="table__text table__text_theme_dark.css">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">8</h3>
+            <p class="table__text table__text_theme_dark.css">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">9</h3>
+            <p class="table__text table__text_theme_dark.css">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark.css">10</h3>
+            <p class="table__text table__text_theme_dark.css">Уделяйте внимание количеству и скорости.</p>
+          </div>
+
+        </div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные Ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+         <a class="resources__logo" href="#"> <img src="./images/resources-arzamas.png" alt="arzamas"></a>
+         <a class="resources__logo" href="#"><img src="./images/resources-n1.png" alt="N1"></a>
+         <a class="resources__logo" href="#"><img src="./images/resources-strelka.png" alt="Стрелка"></a>
+         <a class="resources__logo" href="#"><img src="./images/resources-polka.png" alt="Полка"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <div class="logo logo_place_footer" role="img"></div>
+          <p class="footer__author">&copy; Котов Виталий</p>
+        </div>
 
+        <div class="footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <ul class="footer__column-links">
+           <li><a class="footer__column-link" href="#">Главная</a></li>
+           <li><a class="footer__column-link footer__column-link_space_top" href="#">Концепция</a></li>
+           <li><a class="footer__column-link footer__column-link_space_top" href="#">Наставники</a></li>
+          </ul>
+        </div>
+
+
+        <div class="footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links">
+           <li>
+             <a class="footer__column-link" href="#" target="blank"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook</a>
+            </li>
+           <li><a class="footer__column-link footer__column-link_space_top" href="#" target="blank"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">Вконтакте</a></li>
+           <li><a class="footer__column-link footer__column-link_space_top" href="#" target="blank"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
