--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <section class="description">
           <div class="two-columns">
             <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
@@ -115,7 +114,6 @@
             </div>
           </div>
         </section>
-
         <section class="video">
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
@@ -134,11 +132,9 @@
             ></iframe>
           </div>
         </section>
-
         <section class="oakley">
           <div class="two-columns">
             <h3 class="two-columns__brief">История Барбары Оакли</h3>
-
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 С детства Барбаре не давалась математика. Она считала себя
@@ -153,14 +149,12 @@
             </div>
           </div>
         </section>
-
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <h3 class="feynman__subtitle">Выучить и не забыть</h3>
           <a class="feynman__link" href="#" target="blank">Подробнее →</a>
           <div class="feynman__img" role="img"></div>
         </section>
-
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
           <p class="section-subtitle">Про учебу и мозг</p>
@@ -209,7 +203,6 @@
             </li>
           </ul>
         </section>
-
         <section class="khan">
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
@@ -229,7 +222,6 @@
             </div>
           </div>
         </section>
-
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
             Принципы обучения
@@ -238,61 +230,61 @@
             от Джоша Кауфмана
           </p>
           <ul class="table table_theme_dark">
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">
                 Выберите привлекательный проект.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">
                 Определите целевой уровень мастерства.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">
                 Разбейте навык на элементы.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">
                 Приготовьте всё необходимое для занятий.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">
                 Устраните препятствия для занятий.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">
                 Выделите специальное время для занятий.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">
                 Создайте быстрые петли обратной связи.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
             </li>
-            <li class="table__cell_theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">
                 Уделяйте внимание количеству и скорости.
